--- a/src/sample/welcome.fxml
+++ b/src/sample/welcome.fxml
@@ -1,6 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="770.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.welcomeController">
+   <children>
+      <ImageView fitWidth="1200.0" layoutY="-85.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/convousm.jpg" />
+         </image>
+      </ImageView>
+      <Text layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Course Registration System" textAlignment="CENTER" wrappingWidth="1200.8989562988281">
+         <font>
+            <Font size="48.0" />
+         </font>
+      </Text>
+      <AnchorPane layoutY="491.0" prefHeight="64.0" prefWidth="1200.0">
+         <children>
+            <Button layoutX="350.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="64.0" prefWidth="191.0" style="-fx-background-color: EB7E31;" text="Student" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Button>
+            <Button layoutX="659.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="64.0" prefWidth="191.0" style="-fx-background-color: EB7E31;" text="Lecturer" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutY="658.0" prefHeight="112.0" prefWidth="1200.0">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#3c047c" height="112.0" stroke="BLACK" strokeType="INSIDE" width="1200.0" />
+            <Text fill="WHITE" layoutX="48.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Useful Links">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Text>
+            <Hyperlink layoutX="48.0" layoutY="60.0" onAction="#openLink" text="Official USM Website" textFill="WHITE" />
+            <Text fill="WHITE" layoutX="935.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Powered by: CAT201 Project">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+         </children>
+      </AnchorPane>
+   </children>
+</AnchorPane>
