--- a/src/sample/contactUs.fxml
+++ b/src/sample/contactUs.fxml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
@@ -17,26 +19,34 @@
    <left>
       <AnchorPane prefHeight="770.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to right top, #3c047c, #8e0070, #c2005b, #e04644, #eb7e31);" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="200.0" layoutY="141.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/usm-ringlogo.png" />
-               </image>
-            </ImageView>
-            <Text fill="WHITE" layoutY="400.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student" textAlignment="CENTER" wrappingWidth="600             ">
-               <font>
-                  <Font size="48.0" />
-               </font>
-            </Text>
-            <Text fill="WHITE" layoutY="450.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course Registration" textAlignment="CENTER" wrappingWidth="600             ">
-               <font>
-                  <Font size="48.0" />
-               </font>
-            </Text>
-            <Text fill="WHITE" layoutY="500.0" strokeType="OUTSIDE" strokeWidth="0.0" text="System" textAlignment="CENTER" wrappingWidth="600             ">
-               <font>
-                  <Font size="48.0" />
-               </font>
-            </Text>
+            <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.6" AnchorPane.topAnchor="0.0">
+               <children>
+                  <Pane prefHeight="330.0" prefWidth="600.0">
+                     <children>
+                        <ImageView fitHeight="200.0" fitWidth="200.0" onMouseClicked="#openBrowser" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;" translateX="200.0" translateY="125.0">
+                           <image>
+                              <Image url="@images/usm-ringlogo.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </Pane>
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Student" textAlignment="CENTER" wrappingWidth="600             ">
+                     <font>
+                        <Font size="48.0" />
+                     </font>
+                  </Text>
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Course Registration" textAlignment="CENTER" wrappingWidth="600             ">
+                     <font>
+                        <Font size="48.0" />
+                     </font>
+                  </Text>
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="System" textAlignment="CENTER" wrappingWidth="600             ">
+                     <font>
+                        <Font size="48.0" />
+                     </font>
+                  </Text>
+               </children>
+            </VBox>
          </children></AnchorPane>
    </left>
    <right>
@@ -60,11 +70,6 @@
                   </LinearGradient>
                </stroke>
             </Rectangle>
-            <Button layoutX="75.0" layoutY="125.0" mnemonicParsing="false" onMouseClicked="#switchToLogin" prefHeight="51.0" prefWidth="225.0" style="-fx-background-color: transparent; -fx-cursor: hand; -fx-border-color: linear-gradient(to right top, #3c047c, #8e0070, #c2005b, #e04644, #eb7e31); -fx-border-width: 2px 2px 0px 2px;" text="Login">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Button>
             <Hyperlink layoutX="190.0" layoutY="382.0" text="course-registration@usm.my" textAlignment="CENTER">
                <font>
                   <Font size="18.0" />
@@ -75,16 +80,21 @@
                   <Font size="18.0" />
                </font>
             </Hyperlink>
-            <Button layoutX="312.0" layoutY="125.0" mnemonicParsing="false" onMouseClicked="#switchToSignUp" prefHeight="51.0" prefWidth="225.0" style="-fx-background-color: transparent; -fx-border-color: linear-gradient(to right top, #3c047c, #8e0070, #c2005b, #e04644, #eb7e31); -fx-border-width: 2px 2px 0px 2px; -fx-cursor: hand;" text="Sign Up">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Button>
             <Text fill="#eb7e31" layoutX="190.0" layoutY="300.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contact Us" textAlignment="CENTER">
                <font>
                   <Font name="System Bold" size="48.0" />
                </font>
             </Text>
+            <JFXButton layoutX="312.0" layoutY="125.0" onMouseClicked="#SignUp" prefHeight="51.0" prefWidth="225.0" style="-fx-background-color: transparent; -fx-border-color: linear-gradient(to right top, #3c047c, #8e0070, #c2005b, #e04644, #eb7e31); -fx-border-width: 2px 2px 0px 2px; -fx-cursor: hand;" text="Sign Up">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </JFXButton>
+            <JFXButton layoutX="75.0" layoutY="125.0" onMouseClicked="#Login" prefHeight="51.0" prefWidth="225.0" style="-fx-background-color: transparent; -fx-border-color: linear-gradient(to right top, #3c047c, #8e0070, #c2005b, #e04644, #eb7e31); -fx-border-width: 2px 2px 0px 2px; -fx-cursor: hand;" text="Login">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </JFXButton>
          </children>
       </AnchorPane>
    </right>
