--- a/src/sample/logout.fxml
+++ b/src/sample/logout.fxml
@@ -36,7 +36,7 @@
             </Text>
          </children>
       </AnchorPane>
-      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="47.0" layoutY="580.0" onMouseClicked="#switchToWelcome" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
+      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="47.0" layoutY="580.0" onMouseClicked="#Welcome" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
          <image>
             <Image url="@images/power-off.png" />
          </image>
