--- a/src/sample/courseRegistration.fxml
+++ b/src/sample/courseRegistration.fxml
@@ -113,7 +113,7 @@
                   </Text>
                   <HBox prefHeight="40.0" prefWidth="440.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="100.0">
                      <children>
-                        <TextField fx:id="searchField" prefHeight="25.0" prefWidth="400.0">
+                        <TextField fx:id="searchField" prefHeight="25.0" prefWidth="400.0" promptText="Search Course">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -154,7 +154,7 @@
                   </Text>
                   <HBox layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="440.0" AnchorPane.bottomAnchor="210.0" AnchorPane.leftAnchor="10.0">
                      <children>
-                        <TextField fx:id="searchField1" prefHeight="25.0" prefWidth="400.0">
+                        <TextField fx:id="searchField1" prefHeight="25.0" prefWidth="400.0" promptText="Search Suggested Course">
                            <font>
                               <Font size="14.0" />
                            </font>
