--- a/src/sample/lecDashboard.fxml
+++ b/src/sample/lecDashboard.fxml
@@ -59,7 +59,7 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <JFXButton alignment="BASELINE_LEFT" prefHeight="100.0" prefWidth="350.0" style="-fx-cursor: hand;" text="Course Student List" textFill="WHITE">
+                        <JFXButton alignment="BASELINE_LEFT" onMouseClicked="#StuList" prefHeight="100.0" prefWidth="350.0" style="-fx-cursor: hand;" text="Course Student List" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="24.0" />
                            </font>
@@ -71,7 +71,7 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <JFXButton alignment="BASELINE_LEFT" prefHeight="100.0" prefWidth="350.0" style="-fx-cursor: hand;" text="Contact Us" textFill="WHITE">
+                        <JFXButton alignment="BASELINE_LEFT" onMouseClicked="#ContactUs" prefHeight="100.0" prefWidth="350.0" style="-fx-cursor: hand;" text="Contact Us" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="24.0" />
                            </font>
