--- a/src/sample/stuList.fxml
+++ b/src/sample/stuList.fxml
@@ -109,7 +109,7 @@
                         </Label>
                      </children>
                   </HBox>
-                  <Text layoutX="18.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Teaching Course" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="60.0">
+                  <Text layoutX="18.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course List" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="60.0">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -128,23 +128,23 @@
                         </ImageView>
                      </children>
                   </HBox>
-                  <ListView fx:id="teachingCourse" prefHeight="200.0" prefWidth="440.0" style="-fx-fixed-cell-size: 30;" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="140.0" />
-                  <JFXButton fx:id="addCourseButton" layoutX="28.0" layoutY="344.0" style="-fx-background-color: #EB7E31;" text="Add Course" textFill="WHITE" AnchorPane.leftAnchor="358.0" AnchorPane.topAnchor="345.0">
+                  <ListView fx:id="courseList" prefHeight="200.0" prefWidth="440.0" style="-fx-fixed-cell-size: 30;" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="140.0" />
+                  <JFXButton fx:id="addCourseButton" layoutX="28.0" layoutY="344.0" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Add Course" textFill="WHITE" AnchorPane.leftAnchor="358.0" AnchorPane.topAnchor="345.0">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </JFXButton>
-                  <ImageView fx:id="printPreview" fitHeight="25.0" fitWidth="25.0" layoutX="332.0" layoutY="333.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="60.0">
+                  <ImageView fx:id="printPreview" fitHeight="25.0" fitWidth="25.0" layoutX="332.0" layoutY="333.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="320.0">
                      <image>
                         <Image url="@images/printer.png" />
                      </image>
                   </ImageView>
-                  <Text layoutX="28.0" layoutY="93.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student List" AnchorPane.leftAnchor="460.0" AnchorPane.topAnchor="60.0">
+                  <Text layoutX="28.0" layoutY="93.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student List" AnchorPane.leftAnchor="460.0" AnchorPane.topAnchor="320.0">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Text>
-                  <VBox layoutX="26.0" layoutY="423.0" prefHeight="200.0" prefWidth="440.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="410.0">
+                  <VBox layoutX="26.0" layoutY="423.0" prefHeight="250.0" prefWidth="420.0" AnchorPane.leftAnchor="460.0" AnchorPane.topAnchor="60.0">
                      <children>
                         <HBox prefHeight="30.0" prefWidth="200.0">
                            <children>
@@ -163,16 +163,15 @@
                         <PieChart fx:id="pieChart" title="Students Year" />
                      </children>
                   </VBox>
-                  <TableView fx:id="studentList" layoutX="505.0" layoutY="140.0" prefHeight="480.0" prefWidth="420.0" AnchorPane.leftAnchor="460.0" AnchorPane.topAnchor="140.0">
+                  <TableView fx:id="studentList" layoutX="505.0" layoutY="140.0" prefHeight="210.0" prefWidth="420.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="460.0">
                     <columns>
-                      <TableColumn fx:id="name" prefWidth="140.0" text="Name" />
+                      <TableColumn fx:id="name" prefWidth="280.0" text="Name" />
                       <TableColumn fx:id="matric" prefWidth="140.0" text="Matric No" />
-                        <TableColumn fx:id="email" prefWidth="140.0" text="Email" />
                     </columns>
                   </TableView>
-                  <HBox layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="440.0" AnchorPane.leftAnchor="460.0" AnchorPane.topAnchor="100.0">
+                  <HBox layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="420.0" AnchorPane.leftAnchor="460.0" AnchorPane.topAnchor="360.0">
                      <children>
-                        <TextField fx:id="searchStudent" prefHeight="25.0" prefWidth="400.0" promptText="Search Student">
+                        <TextField fx:id="searchStudent" prefHeight="25.0" prefWidth="380.0" promptText="Search Student">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -184,6 +183,17 @@
                         </ImageView>
                      </children>
                   </HBox>
+                  <Text layoutX="28.0" layoutY="93.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Teaching Course" AnchorPane.bottomAnchor="260.0" AnchorPane.leftAnchor="10.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
+                  <ListView fx:id="teachingCourse" layoutX="10.0" layoutY="10.0" prefHeight="150.0" prefWidth="440.0" style="-fx-fixed-cell-size: 30;" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="10.0" />
+                  <JFXButton fx:id="addCourseButton1" layoutX="38.0" layoutY="354.0" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Remove Course" textFill="WHITE" AnchorPane.bottomAnchor="60.0" AnchorPane.rightAnchor="450.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </JFXButton>
                </children>
             </AnchorPane>
          </center>
